fix endpoint and no async for delete
